--- a/responce.html
+++ b/responce.html
@@ -1,11 +1,10 @@
 HTTP/1.1 200 OK
 Server: nginx/1.21.5
-Date: Sun, 12 Feb 2023 18:06:33 GMT
+Date: Mon, 13 Feb 2023 16:52:16 GMT
 Content-Type: text/html; charset=utf-8
 Content-Length: 7419
 Last-Modified: Wed, 08 Feb 2023 16:14:20 GMT
-Connection: keep-alive
-Keep-Alive: timeout=15
+Connection: close
 ETag: "63e3ca5c-1cfb"
 Accept-Ranges: bytes
 
