--- a/defaultErrorPages/405.html
+++ b/defaultErrorPages/405.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>500: INTERNAL SERVER ERROR</title>
+	<title>404: NOT FOUND</title>
 </head>
 
 <body>
 	<h1 style="text-align: center; font-size: 3rem">
-		500
+		405
 	</h1>
-	<h1 style="text-align: center;">Internal Server Error</h1>
+	<h1 style="text-align: center;">Not Allowed</h1>
 	<hr>
 </body>
 
