default error pages

--- a/www/defaultErrorPages/400.html
+++ b/www/defaultErrorPages/400.html
@@ -12,7 +12,7 @@
 	<h1 style="text-align: center; font-size: 3rem">
 		400
 	</h1>
-	<h1 style="text-align: center;">Bad Request</h1>
+	<h1 style="text-align: center;">BAD REQUEST</h1>
 	<hr>
 </body>
 
