--- a/www/defaultErrorPages/403.html
+++ b/www/defaultErrorPages/403.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>401: UNAUTHORIZED</title>
+	<title>403: FORBIDDEN</title>
 </head>
 
 <body>
 	<h1 style="text-align: center; font-size: 3rem">
-		401
+		403
 	</h1>
-	<h1 style="text-align: center;">UNAUTHORIZED</h1>
+	<h1 style="text-align: center;">FORBIDDEN</h1>
 	<hr>
 </body>
 
