--- a/www/defaultErrorPages/500.html
+++ b/www/defaultErrorPages/500.html
@@ -12,7 +12,7 @@
 	<h1 style="text-align: center; font-size: 3rem">
 		500
 	</h1>
-	<h1 style="text-align: center;">Internal Server Error</h1>
+	<h1 style="text-align: center;">INTERNAL SERVER ERROR</h1>
 	<hr>
 </body>
 
